Assure correct alignment of input fields

--- a/app/assets/stylesheets/content/_forms.sass
+++ b/app/assets/stylesheets/content/_forms.sass
@@ -515,6 +515,7 @@ input[readonly].-clickable
 
   .form--grouping-row
     @include grid-block(10)
+    align-items: center
 
   .form--grouping-row + .form--grouping-row
     @include grid-offset(2)
